--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Tasking Tracking
 email: Daniel.Kozlowski@va.gov
 description: >- # this means to ignore newlines until "baseurl:"
   This is a simple TODO site that will showcase the Project Management capabilities of GitHub
-github_username:  CyberKoz
+github_username:  lafayette89
 
 # Build settings
 markdown: kramdown
